# data-veracity

./: .gitignore  README.md  SECURITY.md  pnpm-lock.yaml
docs/: design-document.md
docs/spec/: dva-api.yaml  dva-processing.yaml  dva-vc-manager.yaml  openapi.yaml  vla-manager-api.yaml
dva-acapy-controller/: Dockerfile  pyproject.toml
dva-acapy-controller/src/dva_acapy_controller/: controller.py
dva-acapy-controller/tests/: test_cred_def_fix.py
dva-api/: Dockerfile
dva-api/api/: build.gradle.kts
dva-api/api/src/main/kotlin/hu/bme/mit/ftsrg/dva/api/: AdminDTOs.kt  AoVDTOs.kt  Application.kt
dva-api/api/src/main/kotlin/hu/bme/mit/ftsrg/dva/api/auth/: ApiKeyAuth.kt
dva-api/api/src/main/kotlin/hu/bme/mit/ftsrg/dva/api/db/: PgRequestLogRepo.kt  databases.kt  requestLogMapping.kt  templateMapping.kt  whitelistMapping.kt
dva-api/api/src/main/kotlin/hu/bme/mit/ftsrg/dva/api/err/: errHandling.kt
dva-api/api/src/main/kotlin/hu/bme/mit/ftsrg/dva/api/jws/: DidKey.kt  JwsSigner.kt  SigningKeyStore.kt
dva-api/api/src/main/kotlin/hu/bme/mit/ftsrg/dva/api/resource/: Admin.kt  Attestations.kt  Templates.kt
dva-api/api/src/main/kotlin/hu/bme/mit/ftsrg/dva/api/route/: adminRoutes.kt  aovRoutes.kt  templateRoutes.kt  vlaRoutes.kt
dva-api/api/src/main/resources/: application.yaml
dva-api/api/src/test/kotlin/hu/bme/mit/ftsrg/dva/api/jws/: DidKeyTest.kt  JwsSignerTest.kt  SigningKeyStoreTest.kt
dva-api/api/src/test/kotlin/hu/bme/mit/ftsrg/dva/api/route/: AdminRoutesTest.kt  AoVRoutesTest.kt  (+3 more)
dva-api/buildSrc/: build.gradle.kts
dva-api/buildSrc/src/main/kotlin/: buildlogic.jvmbased-common-conventions.gradle.kts
dva-api/gradle/: libs.versions.toml
dva-api/model/src/main/kotlin/hu/bme/mit/ftsrg/dva/jws/: FakeWhitelistRepo.kt  WhitelistRepo.kt
dva-api/model/src/main/kotlin/hu/bme/mit/ftsrg/dva/log/: FakeReqestLogRepo.kt  ReqestLogRepo.kt  RequestLog.kt
dva-dashboard/: package-lock.json  package.json  pnpm-lock.yaml
dva-processing/: Dockerfile  pyproject.toml
dva-processing/src/dva_processing/: config.py  eval.py  http.py  main.py  model.py  processing.py  rmq_consumer.py  tranches.py  xapi_checks.py
dva-processing/src/dva_processing/engines/: jq.py  json_schema.py
dva-processing/tests/: test_eval_batch.py  test_issuer_switch.py  test_jq_security.py  test_json_schema_security.py  test_rmq_integration.py  test_tranche_test_data.py  test_xapi_tranches.py
dva-vc-issuer/: Dockerfile  README.md  pyproject.toml
dva-vc-issuer/src/dva_vc_issuer/: app.py  config.py  keys.py  main.py  models.py  signing.py
dva-vc-issuer/tests/: test_api.py  test_vc_issuer.py
dva-vc-manager/: Dockerfile  README.md  pyproject.toml
dva-vc-manager/src/dva_vc_manager/: __init__.py  auth.py  config.py  dependencies.py  did_key.py  keys.py  main.py  models.py  routes.py  signing.py  whitelist.py
dva-vc-manager/tests/: test_did_key.py  test_jws.py  test_keys.py  test_routes.py  test_whitelist.py
test-env/: common-services.yml  compose.acapy.yml  compose.yml
test-env/karate-features/: aov_sync_gen.feature  aov_sync_verify.feature
test-env/test-data/aov/tranche_basic/: request.json
test-env/test-data/aov/tranche_enriched/: request.json
test-env/test-data/aov/tranche_full/: request.json
test-env/test-data/aov/tranche_incomplete/: request.json
vla-manager/: package-lock.json  package.json  pnpm-lock.yaml
vla-manager-api/: Dockerfile  README.md  pyproject.toml
vla-manager-api/src/vla_manager_api/: __init__.py  auth.py  config.py  dependencies.py  main.py  models.py  repo.py  routes.py  template_routes.py
vla-manager-api/tests/: test_vla_crud.py
(+2 files in other folders)
