[project]
name = "dva-vc-issuer"
version = "0.1.0"
description = "W3C Verifiable Credential issuer with JWS signing for DVA"
readme = "README.md"
authors = [
    { name = "Yassine Rhouma", email = "yassine.rhouma@icloud.com" },
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "pydantic>=2.10.6",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    "psycopg[binary]>=3.2.9",
    "structlog>=25.1.0",
    "requests>=2.32.3",
]

[project.scripts]
dva-vc-issuer = "dva_vc_issuer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dva_vc_issuer"]

[dependency-groups]
dev = ["pytest>=8.4.1", "httpx>=0.28.1"]