[project]
name = "dva-vc-manager"
version = "0.1.0"
description = "DVA Verifiable Credential Manager — issues and verifies AoV JWS credentials"
readme = "README.md"
authors = [{ name = "FTSRG", email = "bpeter@edu.bme.hu" }]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "base58>=2.1.1",
    "fastapi~=0.136.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.5.0",
    "pynacl>=1.5.0",
    "structlog>=25.1.0",
    "uvicorn>=0.34.3",
]
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
dva-vc-manager = "dva_vc_manager.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dva_vc_manager"]

[dependency-groups]
dev = ["pytest>=8.3.5", "httpx>=0.27.0", "pytest-asyncio>=0.24.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"