[project]
name = "vla-manager-api"
version = "0.1.0"
description = "VLA Manager API — sole owner of Veracity Level Agreements, hosted at the Data Intermediary"
readme = "README.md"
authors = [{ name = "FTSRG", email = "bpeter@edu.bme.hu" }]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi~=0.136.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.5.0",
    "structlog>=25.1.0",
    "uvicorn>=0.34.3",
]
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
vla-manager-api = "vla_manager_api.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vla_manager_api"]

[dependency-groups]
dev = ["pytest>=8.3.5", "httpx>=0.27.0"]